Here's the commented version of the code:

```c++
// Copyright 2023 The gRPC Authors.

#include <grpc/support/port_platform.h>

#include "src/core/lib/iomgr/port.h"

// Only compile this file if POSIX socket address resolution is available
#ifdef GRPC_POSIX_SOCKET_RESOLVE_ADDRESS

#include <netdb.h>
#include <string.h>
#include <sys/socket.h>

#include <string>
#include <type_traits>
#include <utility>
#include <vector>

#include "absl/functional/any_invocable.h"
#include "absl/status/status.h"
#include "absl/status/statusor.h"
#include "absl/strings/str_cat.h"
#include "absl/strings/str_format.h"
#include "src/core/lib/event_engine/posix_engine/native_posix_dns_resolver.h"
#include "src/core/util/host_port.h"
#include "src/core/util/useful.h"

namespace grpc_event_engine::experimental {

// Performs a blocking DNS lookup for the given hostname and port
// Arguments:
//   name - The hostname and optional port to resolve (e.g., "example.com:80")
//   default_port - The port to use if none is specified in the name
// Returns:
//   A vector of resolved addresses on success, or an error status on failure
absl::StatusOr<std::vector<EventEngine::ResolvedAddress>>
LookupHostnameBlocking(absl::string_view name, absl::string_view default_port) {
  struct addrinfo hints;
  struct addrinfo *result = nullptr, *resp;
  std::string host;
  std::string port;

  // Split input name into host and port components
  grpc_core::SplitHostPort(name, &host, &port);
  if (host.empty()) {
    return absl::InvalidArgumentError(absl::StrCat("Unparsable name: ", name));
  }
  if (port.empty()) {
    if (default_port.empty()) {
      return absl::InvalidArgumentError(
          absl::StrFormat("No port in name %s or default_port argument", name));
    }
    port = std::string(default_port);
  }

  // Configure hints for getaddrinfo
  memset(&hints, 0, sizeof(hints));
  hints.ai_family = AF_UNSPEC;     // Accept both IPv4 and IPv6
  hints.ai_socktype = SOCK_STREAM; // Stream socket (TCP)
  hints.ai_flags = AI_PASSIVE;     // For wildcard IP address

  // Perform DNS resolution
  int s = getaddrinfo(host.c_str(), port.c_str(), &hints, &result);
  if (s != 0) {
    // If resolution fails, try common service names
    const char* svc[][2] = {{"http", "80"}, {"https", "443"}};
    for (size_t i = 0; i < GPR_ARRAY_SIZE(svc); i++) {
      if (port == svc[i][0]) {
        s = getaddrinfo(host.c_str(), svc[i][1], &hints, &result);
        break;
      }
    }
  }
  if (s != 0) {
    return absl::UnknownError(absl::StrFormat(
        "Address lookup failed for %s os_error: %s syscall: getaddrinfo", name,
        gai_strerror(s)));
  }

  // Convert results to ResolvedAddress format
  std::vector<EventEngine::ResolvedAddress> addresses;
  for (resp = result; resp != nullptr; resp = resp->ai_next) {
    addresses.emplace_back(resp->ai_addr, resp->ai_addrlen);
  }
  if (result) {
    freeaddrinfo(result);
  }
  return addresses;
}

// Constructor for NativePosixDNSResolver
// Arguments:
//   event_engine - The EventEngine instance to use for asynchronous operations
NativePosixDNSResolver::NativePosixDNSResolver(
    std::shared_ptr<EventEngine> event_engine)
    : event_engine_(std::move(event_engine)) {}

// Asynchronously resolves a hostname
// Arguments:
//   on_resolved - Callback to be invoked with the resolution result
//   name - The hostname and optional port to resolve
//   default_port - The port to use if none is specified in the name
void NativePosixDNSResolver::LookupHostname(
    EventEngine::DNSResolver::LookupHostnameCallback on_resolved,
    absl::string_view name, absl::string_view default_port) {
  // Run the blocking lookup in the event engine's thread pool
  event_engine_->Run([name = std::string(name), default_port,
                      on_resolved = std::move(on_resolved)]() mutable {
    on_resolved(LookupHostnameBlocking(name, default_port));
  });
}

// Asynchronously resolves SRV records (not implemented)
// Arguments:
//   on_resolved - Callback to be invoked with the resolution result
//   name - The SRV record name to look up
void NativePosixDNSResolver::LookupSRV(
    EventEngine::DNSResolver::LookupSRVCallback on_resolved,
    absl::string_view /* name */) {
  // Return unimplemented error since SRV records aren't supported
  event_engine_->Run([on_resolved = std::move(on_resolved)]() mutable {
    on_resolved(absl::UnimplementedError(
        "The Native resolver does not support looking up SRV records"));
  });
}

// Asynchronously resolves TXT records (not implemented)
// Arguments:
//   on_resolved - Callback to be invoked with the resolution result
//   name - The TXT record name to look up
void NativePosixDNSResolver::LookupTXT(
    EventEngine::DNSResolver::LookupTXTCallback on_resolved,
    absl::string_view /* name */) {
  // Return unimplemented error since TXT records aren't supported
  event_engine_->Run([on_resolved = std::move(on_resolved)]() mutable {
    on_resolved(absl::UnimplementedError(
        "The Native resolver does not support looking up TXT records"));
  });
}

}  // namespace grpc_event_engine::experimental

#endif  // GRPC_POSIX_SOCKET_RESOLVE_ADDRESS
```