Here's the commented version of the code:

```c++
// Copyright 2024 The gRPC Authors

#include <grpc/support/port_platform.h>

#ifdef GPR_WINDOWS
#include <grpc/event_engine/event_engine.h>
#include <inttypes.h>
#include <string.h>
#include <sys/types.h>

#include <string>

#include "absl/strings/str_cat.h"
#include "absl/strings/str_format.h"
#include "src/core/lib/event_engine/windows/native_windows_dns_resolver.h"
#include "src/core/lib/iomgr/error.h"
#include "src/core/util/host_port.h"
#include "src/core/util/status_helper.h"

namespace grpc_event_engine::experimental {

namespace {
// Performs a blocking DNS lookup for a hostname.
// Args:
//   name: The hostname to resolve, optionally including a port (host:port)
//   default_port: The default port to use if no port is specified in name
// Returns:
//   On success: A vector of resolved addresses
//   On failure: An error status indicating what went wrong
absl::StatusOr<std::vector<EventEngine::ResolvedAddress>>
LookupHostnameBlocking(absl::string_view name, absl::string_view default_port) {
  std::vector<EventEngine::ResolvedAddress> addresses;

  // Split input name into host and port components
  std::string host;
  std::string port;
  grpc_core::SplitHostPort(name, &host, &port);
  
  // Validate host component exists
  if (host.empty()) {
    return absl::InvalidArgumentError(absl::StrCat("Unparsable name: ", name));
  }
  
  // If no port in name, use default_port if provided
  if (port.empty()) {
    if (default_port.empty()) {
      return absl::InvalidArgumentError(
          absl::StrFormat("No port in name %s or default_port argument", name));
    }
    port = std::string(default_port);
  }

  // Configure hints for getaddrinfo
  struct addrinfo hints;
  memset(&hints, 0, sizeof(hints));
  hints.ai_family = AF_UNSPEC;     // Return both IPv4 and IPv6 addresses
  hints.ai_socktype = SOCK_STREAM; // Stream socket (TCP)
  hints.ai_flags = AI_PASSIVE;     // For wildcard IP address
  
  // Perform DNS lookup
  struct addrinfo* result = nullptr;
  int getaddrinfo_error =
      getaddrinfo(host.c_str(), port.c_str(), &hints, &result);
  if (getaddrinfo_error != 0) {
    return absl::UnknownError(
        absl::StrFormat("Address lookup failed for %s os_error: %s", name,
                        grpc_core::StatusToString(
                            GRPC_WSA_ERROR(WSAGetLastError(), "getaddrinfo"))
                            .c_str()));
  }

  // Convert results to ResolvedAddress format
  for (auto* resp = result; resp != nullptr; resp = resp->ai_next) {
    addresses.emplace_back(resp->ai_addr, resp->ai_addrlen);
  }
  
  // Cleanup
  if (result) freeaddrinfo(result);
  return addresses;
}

} // namespace

// Constructor for NativeWindowsDNSResolver
// Args:
//   event_engine: The EventEngine instance to use for running DNS lookups
NativeWindowsDNSResolver::NativeWindowsDNSResolver(
    std::shared_ptr<EventEngine> event_engine)
    : event_engine_(std::move(event_engine)) {}

// Performs an asynchronous hostname lookup
// Args:
//   on_resolved: Callback to be invoked with the results
//   name: The hostname to resolve
//   default_port: Default port to use if none specified in name
void NativeWindowsDNSResolver::LookupHostname(
    EventEngine::DNSResolver::LookupHostnameCallback on_resolved,
    absl::string_view name, absl::string_view default_port) {
  // Schedule the blocking lookup operation on the event engine
  event_engine_->Run(
      [name, default_port, on_resolved = std::move(on_resolved)]() mutable {
        on_resolved(LookupHostnameBlocking(name, default_port));
      });
}

// Performs an asynchronous SRV record lookup (not implemented)
// Args:
//   on_resolved: Callback to be invoked with the results
//   name: The SRV record name to lookup
void NativeWindowsDNSResolver::LookupSRV(
    EventEngine::DNSResolver::LookupSRVCallback on_resolved,
    absl::string_view ) {
  // SRV lookups are not supported - return unimplemented error
  event_engine_->Run([on_resolved = std::move(on_resolved)]() mutable {
    on_resolved(absl::UnimplementedError(
        "The Native resolver does not support looking up SRV records"));
  });
}

// Performs an asynchronous TXT record lookup (not implemented)
// Args:
//   on_resolved: Callback to be invoked with the results
//   name: The TXT record name to lookup
void NativeWindowsDNSResolver::LookupTXT(
    EventEngine::DNSResolver::LookupTXTCallback on_resolved,
    absl::string_view ) {
  // TXT lookups are not supported - return unimplemented error
  event_engine_->Run([on_resolved = std::move(on_resolved)]() mutable {
    on_resolved(absl::UnimplementedError(
        "The Native resolver does not support looking up TXT records"));
  });
}

} // namespace grpc_event_engine::experimental

#endif // GPR_WINDOWS
```